git commit -m (I fixed the poor color contrast for tc-white selector in style css file)

--- a/style.css
+++ b/style.css
@@ -785,7 +785,7 @@ h4 {
 }
 
 .tc-white {
-    color: #364577!important;
+    color: white!important;
 }
 
 .btn-atomic-tangerine {
